<resources>
    <string name="app_name">GoJejuTour01</string>

    <!-- Sign In -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nickname">Nickname</string>
    <string name="signin_login">로그인</string>
    <string name="signin_register">아직 회원이 아니세요?</string>
    <string name="signin_registerIn">회원가입</string>
    <string name="signin_male">남성</string>
    <string name="signin_female">여성</string>
    <string name="signin_genderhide">비공개</string>

    <string name="signin_google">GOOGLE LOGIN</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>

    <!-- Bottom Navigation View -->
    <string name="home">홈</string>
    <string name="search">장소검색</string>
    <string name="spot">핫플</string>
    <string name="talk">여행자Talk</string>
    <string name="account">마이Page</string>

    <string name="open">open</string>
    <string name="closed">closed</string>

    <!-- Account -->
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="follow">Follow</string>
    <string name="follow_cancel">Follow cancel</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>

    <!-- Alarm -->
    <string name="alarm_favorite">Liked the press</string>
    <string name="alarm_comment">left a message</string>
    <string name="alarm_follow">has started to follow your account</string>

    <!-- Comment -->
    <string name="send">Send</string>

    <!-- Add Photo -->
    <string name="upload_image">Photo Upload</string>
    <string name="hint_image_content">Image description</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />

</resources>